--- a/server/templates/tests/tag/index.html
+++ b/server/templates/tests/tag/index.html
@@ -2,7 +2,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <script defer src="{{ url_for("static", filename="js/tests/genre.js") }}"></script>
+    <script defer src="{{ url_for("static", filename="js/tests/tag.js") }}"></script>
 {% endblock %}
 
 {% block apiTests %}
@@ -18,16 +18,6 @@
                 <div>
                     <label for="list-page-size">Page Size (<code>page_size</code>)</label>
                     <input type="number" id="list-page-size" name="list-page-size" value="5" min="1" max="25"><br>
-                </div>
-                <div>
-                    <label for="list-ordering">Ordering (<code>ordering</code>)</label>
-                    <select id="list-ordering" name="list-ordering">
-                        <option value="id" selected>id</option>
-                        <option value="name">name</option>
-                        <option value="slug">slug</option>
-                        <option value="games_count">games_count</option>
-                        <option value="image_background">image_background</option>
-                    </select>
                 </div>
                 <button id="get-list-button" onclick="getList();">Run Test</button>
             </div>
