--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -43,15 +43,17 @@ body {
 
 header {
     min-height: 8vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header nav {
     float: left;
-    padding-top: 4vh;
-    padding-bottom: 4vh;
     margin-left: -1vw;
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 header nav div a {
@@ -59,6 +61,7 @@ header nav div a {
     text-decoration: none;
     padding: 0.5em 1em;
     font-size: larger;
+    text-align: center;
 }
 
 footer {
