Project reformat and cleanup

--- a/server/templates/tests/creator/index.html
+++ b/server/templates/tests/creator/index.html
@@ -58,7 +58,8 @@
                 </div>
                 <div>
                     <label for="list-page-size-class">Page Size (<code>page_size</code>)</label>
-                    <input type="number" id="list-page-size-class" name="list-page-size-class" value="5" min="1" max="25"><br>
+                    <input type="number" id="list-page-size-class" name="list-page-size-class" value="5" min="1"
+                           max="25"><br>
                 </div>
             </div>
             <button onclick="getListClass('{{ testType.lower() }}');">Run Test</button>
