--- a/server/templates/tests/platform/index.html
+++ b/server/templates/tests/platform/index.html
@@ -115,7 +115,8 @@
                 </div>
                 <div>
                     <label for="parents-page-size-class">Page Size (<code>page_size</code>)</label>
-                    <input type="number" id="parents-page-size-class" name="parents-page-size-class" value="5" min="1" max="25"><br>
+                    <input type="number" id="parents-page-size-class" name="parents-page-size-class" value="5" min="1"
+                           max="25"><br>
                 </div>
                 <div>
                     <label for="parents-ordering-class">Ordering (<code>ordering</code>)</label>
