Made a tiny change to the scripts

--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link id="colours" rel="stylesheet" href="{{ url_for("static", filename="css/_colours.css") }}">
     <link rel="stylesheet" href="{{ url_for("static", filename="css/_base.css") }}">
-    <script src="{{ url_for("static", filename="js/_base.js") }}"></script>
+    <script type="application/javascript" src="{{ url_for("static", filename="js/_base.js") }}"></script>
     <script src="https://kit.fontawesome.com/a7e9f794eb.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     {% block styles %}{% endblock %}
