--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-    <link id="colours" rel="stylesheet" href="{{ url_for("static", filename="css/_colours.css") }}">
-    <link rel="stylesheet" href="{{ url_for("static", filename="css/_base.css") }}">
+    <link type="text/css" id="colours" rel="stylesheet" href="{{ url_for("static", filename="css/_colours.css") }}">
+    <link type="text/css" rel="stylesheet" href="{{ url_for("static", filename="css/_base.css") }}">
     <script type="application/javascript" src="{{ url_for("static", filename="js/_base.js") }}"></script>
-    <script src="https://kit.fontawesome.com/a7e9f794eb.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_{{ reCapchaSiteKey }}"></script>
+    <script type="application/javascript" src="https://kit.fontawesome.com/a7e9f794eb.js" crossorigin="anonymous"></script>
+    <script type="application/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script type="application/javascript" src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_{{ reCapchaSiteKey }}"></script>
     {% block styles %}{% endblock %}
     {% block scripts %}{% endblock %}
 </head>
