--- a/server/templates/tests/game/index.html
+++ b/server/templates/tests/game/index.html
@@ -10,7 +10,7 @@
         <div>
             <h3>Get List</h3>
             <p>Get a list of all the {{ testType.lower() }}s.</p>
-            <div>
+            <div class="test-inputs">
                 <div>
                     <label for="list-page">Page Number (<code>page</code>)</label>
                     <input type="number" id="list-page" name="list-page" value="1" min="1"><br>
