I forgot to colour them

--- a/server/templates/tests/game/index.html
+++ b/server/templates/tests/game/index.html
@@ -127,7 +127,7 @@
             <div id="get-list-response"></div>
         </div>
     </div>
-    <div id="get-additions">
+    <div id="get-additions" class="test test-colours">
         <div>
             <h3>Get Additions</h3>
             <p>Get a list of DLC's for the game, GOTY and other editions, companion apps, etc.</p>
@@ -152,7 +152,7 @@
             <div id="get-additions-response"></div>
         </div>
     </div>
-    <div id="get-creators">
+    <div id="get-creators" class="test test-colours">
         <div>
             <h3>Get Creators</h3>
             <p>Get a list of individual creators that were part of the development team.</p>
@@ -181,7 +181,7 @@
             <div id="get-creators-response"></div>
         </div>
     </div>
-    <div id="get-series">
+    <div id="get-series" class="test test-colours">
         <div>
             <h3>Get Series</h3>
             <p>Get a list of games that are part of the same series.</p>
@@ -206,7 +206,7 @@
             <div id="get-series-response"></div>
         </div>
     </div>
-    <div id="get-parents">
+    <div id="get-parents" class="test test-colours">
         <div>
             <h3>Get Parents</h3>
             <p>Get a list of parent games for DLC's and editions.</p>
@@ -231,7 +231,7 @@
             <div id="get-parents-response"></div>
         </div>
     </div>
-    <div id="get-screenshots">
+    <div id="get-screenshots" class="test test-colours">
         <div>
             <h3>Get Screenshots</h3>
             <p>Get a list of screenshots for the game.</p>
@@ -256,7 +256,7 @@
             <div id="get-screenshots-response"></div>
         </div>
     </div>
-    <div id="get-stores">
+    <div id="get-stores" class="test test-colours">
         <div>
             <h3>Get Stores</h3>
             <p>Get a list of stores where the game is available.</p>
@@ -302,7 +302,7 @@
             <div id="get-details-response"></div>
         </div>
     </div>
-    <div id="get-achievements">
+    <div id="get-achievements" class="test test-colours">
         <div>
             <h3>Get Achievements</h3>
             <p>Get a list of achievements for the game.</p>
@@ -319,7 +319,7 @@
             <div id="get-achievements-response"></div>
         </div>
     </div>
-    <div id="get-trailers">
+    <div id="get-trailers" class="test test-colours">
         <div>
             <h3>Get Trailers</h3>
             <p>Get a list of trailers for the game.</p>
@@ -336,7 +336,7 @@
             <div id="get-trailers-response"></div>
         </div>
     </div>
-    <div id="get-reddit">
+    <div id="get-reddit" class="test test-colours">
         <div>
             <h3>Get Reddit</h3>
             <p>Get a list of reddit posts for the game.</p>
