--- a/server/templates/tests/creator/class.html
+++ b/server/templates/tests/creator/class.html
@@ -11,6 +11,7 @@
         <div id="left"></div>
         <div id="centre">
             <h1>Class Test - creator - {{ type }}</h1>
+            <button onclick="window.history.back()">List</button>
             {% if type == "list" %}
                 <p>List of creators. Data:</p>
                 {% for creator in creators %}
