--- a/server/templates/tests/developer/class.html
+++ b/server/templates/tests/developer/class.html
@@ -11,6 +11,7 @@
         <div id="left"></div>
         <div id="centre">
             <h1>Class Test - developer - {{ type }}</h1>
+            <button onclick="window.history.back()">List</button>
             {% if type == "list" %}
                 <p>List of developers. Data:</p>
                 {% for developer in developers %}
