--- a/server/templates/tests/game/index.html
+++ b/server/templates/tests/game/index.html
@@ -124,7 +124,11 @@
             </div>
         </div>
         <div class="horizontal-list">
-            <h4>Response</h4>
+            <div>
+                <h4>Response</h4>
+                <button onclick="document.getElementById('get-list-response').innerText = '';">Clear</button>
+            </div>
+
             <div id="get-list-response"></div>
         </div>
     </div>
