--- a/server/static/css/games.css
+++ b/server/static/css/games.css
@@ -1,7 +1,26 @@
+#main {
+    display: grid;
+    grid-template-columns: 1fr 4fr 3fr; /* 3 columns, left and right are for shoulder space, middle is main */
+}
+
+#left {
+
+}
+
+#centre {
+
+}
+
+#right {
+
+}
+
 .banner {
     display: flex;
     float: right;
     max-height: 50vh;
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
 
 .banner img {
