--- a/server/templates/games/index.html
+++ b/server/templates/games/index.html
@@ -2,10 +2,38 @@
 
 {% block title %}Games{% endblock %}
 
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for("static", filename="css/games.css") }}">
+{% endblock %}
+
 {% block content %}
-    <form id="game-search" method="get" action="" onsubmit="">
-        <label for="title-query">Search for a game:</label>
-        <input type="text" id="title-query" name="title-query">
-        <button type="submit">Search</button>
-    </form>
+    <section id="search" class="grid-margins">
+        <div id="left">
+
+        </div>
+        <div id="centre">
+            <h1>Search For Games</h1>
+            <form id="game-search" method="get" action="{{ url_for("games.search") }}">
+                <label for="search">Search for a game:</label>
+                <input type="text" id="search" name="search">
+                <button type="submit">Search</button>
+            </form>
+            <div class="gallery">
+                {% if response %}
+                    {% for game in response.results %}
+                        <div class="gallery-item" style="background-image: url('{{ game.background_image if game.background_image else "" }}')">
+                            <div class="gallery-item-details">
+                                <h2>{{ game.name }}</h2>
+                                <p>{{ game.description }}</p>
+                                <a href="{{ url_for("games.game", gameId=game.id) }}">View</a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+        <div id="right">
+
+        </div>
+    </section>
 {% endblock %}
